--- a/views/groups/group.handlebars
+++ b/views/groups/group.handlebars
@@ -1,54 +1,129 @@
-<form action="/groups/new" method="get" style="display:inline;">
-  <button type="submit">Create Group</button>
-</form>
+<div class="group-container">
+  <form action="/groups/new" method="get" style="display:inline;">
+    <button type="submit">Create Group</button>
+  </form>
 
-{{#if success}}
-  <p class="success">{{success}}</p>
-{{/if}}
+  {{#if success}}
+    <p class="success">{{success}}</p>
+  {{/if}}
 
-{{#if error}}
-  <p class="error">{{error}}</p>
-{{/if}}
+  {{#if error}}
+    <p class="error">{{error}}</p>
+  {{/if}}
 
-{{#if groups}}
-  <h2>All Groups</h2>
-  <ul>
-    {{#each groups}}
-      <li>
-        <a href="/groups/{{this._id}}">{{this.groupName}}</a>
-        {{#if this.groupDescription}}
-          <p>{{this.groupDescription}}</p>
-        {{/if}}
-      </li>
-    {{/each}}
-  </ul>
-{{else}}
-  {{#unless group}}
-    <p>No groups yet. Create your first group!</p>
-  {{/unless}}
-{{/if}}
-
-{{#if group}}
-  <hr>
-  <h1>{{group_name}}</h1>
-  <p>{{group_description}}</p>
-
-  <div class="group-actions">
-    <form action="/groups/{{group._id}}/expense/new" method="get" style="display:inline;">
-      <button type="submit">Add Expense</button>
-    </form>
-
-    <form action="/groups/{{group._id}}/addMember" method="get" style="display:inline;">
-      <button type="submit">Add Member</button>
-    </form>
-  </div>
-
-  {{#if groupMembers}}
-    <h2>Group Members</h2>
+  {{#if groups}}
+    <h2>All Groups</h2>
     <ul>
-      {{#each groupMembers}}
-        <li>{{this.firstName}} {{this.lastName}}</li>
+      {{#each groups}}
+        <li>
+          <a href="/groups/{{this._id}}">{{this.groupName}}</a>
+          {{#if this.groupDescription}}
+            <p>{{this.groupDescription}}</p>
+          {{/if}}
+        </li>
       {{/each}}
     </ul>
+  {{else}}
+    {{#unless group}}
+      <p>No groups yet. Create your first group!</p>
+    {{/unless}}
   {{/if}}
-{{/if}}
+
+  {{#if group}}
+    <hr>
+    <h1>{{group_name}}</h1>
+    <p>{{group_description}}</p>
+
+    <div class="group-actions">
+      <form action="/groups/{{group._id}}/expense/new" method="get" style="display:inline;">
+        <button type="submit">Add Expense</button>
+      </form>
+
+      <form action="/groups/{{group._id}}/addMember" method="get" style="display:inline;">
+        <button type="submit">Add Member</button>
+      </form>
+    </div>
+
+    {{#if groupMembers}}
+      <h2>Group Members</h2>
+      <ul>
+        {{#each groupMembers}}
+          <li>{{this.firstName}} {{this.lastName}}</li>
+        {{/each}}
+      </ul>
+    {{/if}}
+
+    <h2>Expenses</h2>
+      {{#if hasExpenses}}
+          <div class="expenses-list">
+              {{#each expenses}}
+                  <div class="expense-item">
+                      <div class="expense-info">
+                          <h3>{{this.name}}</h3>
+                          <p class="expense-cost">${{this.cost}}</p>
+                          <p class="expense-deadline">Due: {{this.deadline}}</p>
+                      </div>
+                    <div class="expense-actions">
+                        <button class="btn btn-info view-details-btn" 
+                                data-expense-id="{{this._id}}"
+                                data-expense-name="{{this.name}}"
+                                data-expense-cost="{{this.cost}}"
+                                data-expense-deadline="{{this.deadline}}"
+                                data-expense-payee="{{this.payeeName}}"
+                                data-expense-payers="{{json this.payerNames}}">
+                            View Details
+                        </button>
+                        <button class="btn btn-danger delete-expense-btn" 
+                                data-expense-id="{{this._id}}"
+                                data-group-id="{{../group_id}}">
+                            Delete
+                        </button>
+                    </div>
+                  </div>
+              {{/each}}
+          </div>
+      {{else}}
+          <p class="no-expenses">No expenses yet. Create one to get started!</p>
+      {{/if}}
+  </div>
+
+  
+  {{/if}}
+
+  <script>
+      
+
+      // Delete expense functionality
+      const deleteExpenseBtns = document.querySelectorAll('.delete-expense-btn');
+
+      deleteExpenseBtns.forEach(btn => {
+          btn.addEventListener('click', async function() {
+              if (!confirm('Are you sure you want to delete this expense?')) {
+                  return;
+              }
+
+              const expenseId = this.getAttribute('data-expense-id');
+              const groupId = this.getAttribute('data-group-id');
+
+              try {
+                  const response = await fetch(`/groups/${groupId}/${expenseId}`, {
+                      method: 'DELETE',
+                      headers: {
+                          'Content-Type': 'application/json'
+                      }
+                  });
+
+                  if (response.ok) {
+                      // Reload the page to show updated expense list
+                      window.location.reload();
+                  } else {
+                      const error = await response.json();
+                      alert('Error deleting expense: ' + (error.error || 'Unknown error'));
+                  }
+              } catch (error) {
+                  alert('Error deleting expense: ' + error.message);
+              }
+          });
+      });
+  </script>
+</div>
