Home screen, seed file, added Bootstrap styling to existing pages

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,21 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3">
-    <div class="container-fluid">
-        <a href="/" class="navbar-brand me-5">Expense Splitter</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item px-2">
-                    <a href="/" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item px-2">
-                    <a href="/" class="nav-link">Profile</a>
-                </li>
-                <li class="nav-item px-2">
-                    <a href="/" class="nav-link">Settings</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<header>
+    {{> navbar hide=hide disable_brand=disable_brand}}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+</header>
