--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,16 +1,19 @@
-<header>
-    {{> header }}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-</header>
+{{> header}}
 <main>
-    {{#if user.groups}}
-        {{#each user.groups}}
-            {{> group-card groupName=groupName groupDescription=groupDescription}}
+    {{#if groups}}
+        <div class="container-fluid">
+        {{#each groups}}
+            {{> group-card
+                groupId=_id
+                groupName=groupName
+                groupDescription=groupDescription
+            }}
         {{/each}}
+        </div>
     {{else}}
         <div class="container-fluid">
             <p>You aren't in any groups! <a href="/groups/new">Create your first group here.</a></p>
         </div>
     {{/if}}
 </main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+{{> bootstrap-js}}
