--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,53 +1,48 @@
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>{{title}}</title>
-		<link rel="stylesheet" href="/public/css/styles.css" />
-	</head>
-	<body>
-		<div class="container">
-			<h1>{{title}}</h1>
+{{> header hide=hide disable_brand=disable_brand}}
+<div class="container-fluid">
+	<h1 class="mb-3">{{title}}</h1>
 
-			{{#if error}}
-				<div class="error-message">
-					<p>{{error}}</p>
-				</div>
-			{{/if}}
-
-			<form method="POST" action="/login" id="login-form">
-				<div class="form-group">
-					<label for="userId">User ID:</label>
-					<input
-						type="text"
-						id="userId"
-						name="userId"
-						value="{{form.userId}}"
-						required
-						minlength="5"
-						maxlength="10"
-						pattern="[a-zA-Z0-9]+"
-						title="User ID must be 5-10 alphanumeric characters"
-					/>
-				</div>
-
-				<div class="form-group">
-					<label for="password">Password:</label>
-					<input
-						type="password"
-						id="password"
-						name="password"
-						required
-						minlength="8"
-					/>
-				</div>
-
-				<button type="submit" class="btn-primary">Login</button>
-			</form>
-
-			<div class="register-link">
-				<p>Don't have an account? <a href="/register">Register here</a></p>
-			</div>
+	{{#if error}}
+		<div class="error-message">
+			<p>{{error}}</p>
 		</div>
-	</body>
-</html>
+	{{/if}}
+
+	<form method="POST" action="/login" id="login-form">
+		<div class="form-floating w-25 mb-3">
+			<input
+				class="form-control"
+				placeholder="User ID goes here"
+				type="text"
+				id="userId"
+				name="userId"
+				value="{{form.userId}}"
+				required
+				minlength="5"
+				maxlength="10"
+				pattern="[a-zA-Z0-9]+"
+				title="User ID must be 5-10 alphanumeric characters"
+			/>
+			<label for="userId">User ID</label>
+		</div>
+		<div class="form-floating w-25 mb-3">
+			<input
+				class="form-control"
+				placeholder="Password goes here"
+				type="password"
+				id="password"
+				name="password"
+				required
+				minlength="8"
+			/>
+			<label for="userId">Password</label>
+		</div>
+
+		<button type="submit" class="btn btn-primary">Login</button>
+	</form>
+
+	<div class="register-link">
+		<p>Don't have an account? <a href="/register">Register here</a></p>
+	</div>
+</div>
+{{> bootstrap-js}}
