--- a/views/groups/group.handlebars
+++ b/views/groups/group.handlebars
@@ -1,3 +1,4 @@
+{{> header}}
 <div class="group-container">
 
   {{#if groups}}
@@ -180,3 +181,4 @@
       });
   </script>
 </div>
+{{> bootstrap-js}}
