--- a/views/groups/removeMember.handlebars
+++ b/views/groups/removeMember.handlebars
@@ -1,24 +1,29 @@
-<h1>Remove Member from {{group.groupName}}</h1>
+{{> header}}
 
-{{#if error}}
-  <p class="error">{{error}}</p>
-{{/if}}
-
-{{#if success}}
-  <p class="success">{{success}}</p>
-{{/if}}
-
-<form action="/groups/{{group._id}}/removeMember" method="POST" novalidate>
-  <label for="user_id">Select member to remove:</label>
-  <select name="user_id" id="user_id" required>
-    {{#each members}}
-      <option value="{{this._id}}">{{this.firstName}} {{this.lastName}}</option>
-    {{/each}}
-  </select>
-  <br><br>
-  <button type="submit">Remove Member</button>
-</form>
-
-<form action="/groups/{{group._id}}" method="get" style="margin-top: 1em;">
-  <button type="submit">Cancel</button>
-</form>
+<div class="container-fluid">
+	<form action="/groups/{{group._id}}" method="get" {{!-- style="margin-top: 10px;" --}}>
+		<button type="submit" class="btn btn-primary">
+			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+				<path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+			</svg>
+		</button>
+	</form>
+	<h1>Remove Member from {{group.groupName}}</h1>
+	<br>
+	{{#if error}}
+		<p class="error">{{error}}</p>
+	{{/if}}
+	{{#if success}}
+		<p class="success">{{success}}</p>
+	{{/if}}
+	<form action="/groups/{{group._id}}/removeMember" method="POST" novalidate>
+		<label for="user_id">Select member to remove:</label>
+		<select name="user_id" id="user_id" required>
+			{{#each members}}
+			<option value="{{this._id}}">{{this.firstName}} {{this.lastName}}</option>
+			{{/each}}
+		</select>
+		<br><br><br>
+		<button type="submit" class="btn btn-primary">Remove Member</button>
+	</form>
+</div>
