--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
 	{{/if}}
 
 	<form method="POST" action="/login" id="login-form">
-		<div class="form-floating w-25 mb-3">
+		<div class="custom-card form-floating {{!-- w-25 --}} mb-3">
 			<input
 				class="form-control"
 				placeholder="User ID goes here"
@@ -25,7 +25,7 @@
 			/>
 			<label for="userId">User ID</label>
 		</div>
-		<div class="form-floating w-25 mb-3">
+		<div class="custom-card form-floating mb-3">
 			<input
 				class="form-control"
 				placeholder="Password goes here"
@@ -45,4 +45,4 @@
 		<p>Don't have an account? <a href="/register">Register here</a></p>
 	</div>
 </div>
-{{> bootstrap-js}}
+{{> custom-card-script initial_width_num=4}}
