--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
     <div class="container-fluid">
         <a {{#unless disable_brand}} href="/home" {{/unless}} class="navbar-brand me-5">Expense Splitter</a>
         {{#unless hide}}
