--- a/views/groups/group.handlebars
+++ b/views/groups/group.handlebars
@@ -36,6 +36,10 @@
     <form action="/groups/{{group._id}}/removeMember" method="get" style="display:inline;">
         <button type="submit">Remove Member</button>
     </form>
+
+    <form action="/groups/{{group._id}}/edit" method="get" style="display:inline;">
+      <button type="submit">Edit Group</button>
+    </form>
   </div>
   
    {{#if success}}
