--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -14,6 +14,9 @@
                     <a href="/profile" class="nav-link">Profile</a>
                 </li>
                 <li class="nav-item px-2">
+                    <a href="/search" class="nav-link">Search</a>
+                </li>
+                <li class="nav-item px-2">
                     <a href="/settings" class="nav-link">Settings</a>
                 </li>
             </ul>
