--- a/views/groups/group.handlebars
+++ b/views/groups/group.handlebars
@@ -106,6 +106,9 @@
             <p><strong>Payers:</strong></p>
             <ul id="modal-payers"></ul>
         </div>
+        <div class="modal-actions">
+            <button id="editExpenseBtn" class="btn btn-primary">Edit Expense</button>
+        </div>
       </div>
   </div>
   {{/if}}
@@ -115,9 +118,11 @@
       const modal = document.getElementById('expenseModal');
       const closeBtn = document.querySelector('.close');
       const viewDetailsBtns = document.querySelectorAll('.view-details-btn');
+      let currentExpenseId = null;
 
       viewDetailsBtns.forEach(btn => {
           btn.addEventListener('click', function() {
+              currentExpenseId = this.getAttribute('data-expense-id');
               const name = this.getAttribute('data-expense-name');
               const cost = this.getAttribute('data-expense-cost');
               const deadline = this.getAttribute('data-expense-deadline');
@@ -139,6 +144,13 @@
 
               modal.style.display = 'block';
           });
+      });
+
+      // Edit expense button handler
+      document.getElementById('editExpenseBtn').addEventListener('click', function() {
+          if (currentExpenseId) {
+              window.location.href = `/groups/{{group_id}}/expense/${currentExpenseId}/edit`;
+          }
       });
 
       closeBtn.addEventListener('click', function() {
