--- a/views/signout.handlebars
+++ b/views/signout.handlebars
@@ -1,4 +1,5 @@
-<div class="signout-container">
+{{>header hide=hide disable_brand=disable_brand}}
+<div class="container-fluid">
   <h1>{{title}}</h1>
   <p>{{message}}</p>
   <p><a href="/register">Create a new account</a> or <a href="/login">Sign in</a></p>
