--- a/views/groups/group.handlebars
+++ b/views/groups/group.handlebars
@@ -40,6 +40,10 @@
     <form action="/groups/{{group._id}}/edit" method="get" style="display:inline;">
       <button type="submit">Edit Group</button>
     </form>
+
+    <form action="/groups/{{group._id}}/export-pdf" method="get" style="display:inline;">
+      <button type="submit" class="btn-export">Export PDF</button>
+    </form>
   </div>
   
    {{#if success}}
